fix bug: init experience score

--- a/experiencemaker/cookbook/bfcl/evaluation.ipynb
+++ b/experiencemaker/cookbook/bfcl/evaluation.ipynb
@@ -224,6 +224,104 @@
    "source": [
     "plot_difference_from_baseline(average_rewards, labels=labels)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0000e01c",
+   "metadata": {},
+   "source": [
+    "### **Difference between with exp and without exp**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "547a7543",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tasks correct in wo-exp but incorrect in w-exp:\n",
+      "{'multi_turn_base_160', 'multi_turn_base_74', 'multi_turn_base_113', 'multi_turn_base_177', 'multi_turn_base_49', 'multi_turn_base_71', 'multi_turn_base_4', 'multi_turn_base_105', 'multi_turn_base_86', 'multi_turn_base_3', 'multi_turn_base_20', 'multi_turn_base_73', 'multi_turn_base_159'}\n",
+      "\n",
+      "Tasks correct in w-exp but incorrect in wo-exp:\n",
+      "{'multi_turn_base_108', 'multi_turn_base_166', 'multi_turn_base_168', 'multi_turn_base_164', 'multi_turn_base_7', 'multi_turn_base_174', 'multi_turn_base_156', 'multi_turn_base_37', 'multi_turn_base_72', 'multi_turn_base_155', 'multi_turn_base_14', 'multi_turn_base_184', 'multi_turn_base_150', 'multi_turn_base_27', 'multi_turn_base_125', 'multi_turn_base_104', 'multi_turn_base_163', 'multi_turn_base_189', 'multi_turn_base_56', 'multi_turn_base_41'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "from collections import defaultdict\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "def process_file(file_path):\n",
+    "    task_results = defaultdict(list)\n",
+    "    with open(file_path, \"r\") as f:\n",
+    "        for line in f:\n",
+    "            if not line.strip():\n",
+    "                continue\n",
+    "            data = json.loads(line)\n",
+    "\n",
+    "            if isinstance(data, list):\n",
+    "                for part_data in data:\n",
+    "                    task_id = part_data[\"task_id\"]\n",
+    "                    after_score = part_data[\"reward\"]\n",
+    "                    task_results[task_id].append(after_score)\n",
+    "            else:\n",
+    "                task_id = data[\"task_id\"]\n",
+    "                after_score = data[\"reward\"]\n",
+    "                task_results[task_id].append(after_score)\n",
+    "\n",
+    "    if not task_results:\n",
+    "        logger.warning(f\"No valid data found in file {file_path}\")\n",
+    "        return None\n",
+    "\n",
+    "    run_counts = [len(scores) for scores in task_results.values()]\n",
+    "    if len(set(run_counts)) > 1:\n",
+    "        logger.warning(f\"Inconsistent number of runs for different tasks in file {file_path}: {set(run_counts)}\")\n",
+    "        return None\n",
+    "\n",
+    "    return task_results\n",
+    "\n",
+    "def run_exp_statistic(model_name, wo_exp_file, w_exp_file):\n",
+    "\n",
+    "    wo_exp_results = process_file(wo_exp_file)\n",
+    "    w_exp_results = process_file(w_exp_file)\n",
+    "\n",
+    "    if wo_exp_results is None or w_exp_results is None:\n",
+    "        return\n",
+    "\n",
+    "    wo_exp_correct = set()\n",
+    "    w_exp_correct = set()\n",
+    "\n",
+    "    for task_id, scores in wo_exp_results.items():\n",
+    "        if max(scores) == 1:\n",
+    "            wo_exp_correct.add(task_id)\n",
+    "\n",
+    "    for task_id, scores in w_exp_results.items():\n",
+    "        if max(scores) == 1:\n",
+    "            w_exp_correct.add(task_id)\n",
+    "\n",
+    "    wo_exp_only_correct = wo_exp_correct - w_exp_correct\n",
+    "    w_exp_only_correct = w_exp_correct - wo_exp_correct\n",
+    "\n",
+    "    print(\"Tasks correct in wo-exp but incorrect in w-exp:\")\n",
+    "    print(wo_exp_only_correct)\n",
+    "\n",
+    "    print(\"\\nTasks correct in w-exp but incorrect in wo-exp:\")\n",
+    "    print(w_exp_only_correct)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    model_name = \"qwen-max-2025-01-25\" # \"qwen-max-latest\",\"qwen3-8b\"\n",
+    "    wo_exp_file = Path(f\"./exp_result/{model_name}/no_think/bfcl-multi-turn-base-val_wo-exp.jsonl\")\n",
+    "    w_exp_file = Path(f\"./exp_result/{model_name}/no_think/bfcl-multi-turn-base-val_w-exp-fixed-recall-only.jsonl\")\n",
+    "\n",
+    "    run_exp_statistic(model_name, wo_exp_file, w_exp_file)\n"
+   ]
   }
  ],
  "metadata": {
